Fix skills wrap

--- a/site.css
+++ b/site.css
@@ -17,8 +17,8 @@ a:link {
   background-color: rgba(220, 220, 220, 0.158);
 }
 .avatar-img img {
-  height: 20rem;
-  width: 20rem;
+  height: 15.5rem;
+  width: 15.5rem;
 }
 
 .container {
@@ -33,6 +33,7 @@ a:link {
 .box {
   background-color: rgba(220, 220, 220, 0.158);
   width: 7rem;
+  font-size: 0.9rem;
 }
 
 .box img {
@@ -61,6 +62,11 @@ a:link {
 }
 
 @media screen and (min-width: 360px) {
+  .avatar-img img {
+    height: 20rem;
+    width: 20rem;
+  }
+
   .card {
     width: 18rem;
   }
